[Video Capture, Chrome OS] Wait until vivid is detected in ChromeOS VM

BUG=chromium:881300,chromium:852302
TEST=Pass capture_unittests with/without vivid enabled on amd64-generic
     VM, and verify vivid is used when it's enabled.
TEST=Pass capture_unittests on teemo (a Chromebox), and verify it
     doesn't wait for camera.

Change-Id: I2a11a848639eba426daa4db2f8d22b90c01e08b9
Reviewed-on: https://chromium-review.googlesource.com/c/1260806
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Commit-Queue: Shik Chen <shik@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599658}