media/capture/video/chromeos/camera_hal_delegate.cc
@@ -14,7 +14,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/bind.h"
 #include "base/bind_helpers.h"
 #include "base/posix/safe_strerror.h"
+#include "base/process/launch.h"
 #include "base/strings/string_piece.h"
+#include "base/strings/string_split.h"
 #include "media/capture/video/chromeos/camera_buffer_factory.h"
 #include "media/capture/video/chromeos/camera_hal_dispatcher_impl.h"
 #include "media/capture/video/chromeos/camera_metadata_utils.h"
@@ -42,6 +44,33 @@ class LocalCameraClientObserver : public CameraClientObserver {
   DISALLOW_IMPLICIT_CONSTRUCTORS(LocalCameraClientObserver);
 };
 
+// chromeos::system::StatisticsProvider::IsRunningOnVM() is not available in
+// unittest.
+bool IsRunningOnVM() {
+  static bool is_vm = []() {
+    std::string output;
+    if (!base::GetAppOutput({"crossystem", "inside_vm"}, &output)) {
+      return false;
+    }
+    return output == "1";
+  }();
+  return is_vm;
+}
+
+bool IsVividLoaded() {
+  std::string output;
+  if (!base::GetAppOutput({"lsmod"}, &output)) {
+    return false;
+  }
+
+  std::vector<base::StringPiece> lines = base::SplitStringPieceUsingSubstr(
+      output, "\n", base::KEEP_WHITESPACE, base::SPLIT_WANT_NONEMPTY);
+
+  return std::any_of(lines.begin(), lines.end(), [](const auto& line) {
+    return base::StartsWith(line, "vivid", base::CompareCase::SENSITIVE);
+  });
+}
+
 }  // namespace
 
 CameraHalDelegate::CameraHalDelegate(
@@ -52,6 +81,8 @@ CameraHalDelegate::CameraHalDelegate(
       builtin_camera_info_updated_(
           base::WaitableEvent::ResetPolicy::MANUAL,
           base::WaitableEvent::InitialState::NOT_SIGNALED),
+      has_camera_connected_(base::WaitableEvent::ResetPolicy::MANUAL,
+                            base::WaitableEvent::InitialState::NOT_SIGNALED),
       num_builtin_cameras_(0),
       camera_buffer_factory_(new CameraBufferFactory()),
       ipc_task_runner_(std::move(ipc_task_runner)),
@@ -172,6 +203,11 @@ void CameraHalDelegate::GetDeviceDescriptors(
   if (!UpdateBuiltInCameraInfo()) {
     return;
   }
+
+  if (IsRunningOnVM() && IsVividLoaded()) {
+    has_camera_connected_.TimedWait(base::TimeDelta::FromSeconds(1));
+  }
+
   base::AutoLock lock(camera_info_lock_);
   for (const auto& it : camera_info_) {
     const std::string& camera_id = it.first;
@@ -254,6 +290,7 @@ void CameraHalDelegate::ResetMojoInterfaceOnIpcThread() {
   }
   builtin_camera_info_updated_.Reset();
   camera_module_has_been_set_.Reset();
+  has_camera_connected_.Reset();
 
   // Clear all cached camera info, especially external cameras.
   camera_info_.clear();
@@ -368,6 +405,10 @@ void CameraHalDelegate::OnGotCameraInfoOnIpcThread(
       builtin_camera_info_updated_.Signal();
     }
   }
+
+  if (camera_info_.size() == 1) {
+    has_camera_connected_.Signal();
+  }
 }
 
 void CameraHalDelegate::OpenDeviceOnIpcThread(
@@ -390,6 +431,9 @@ void CameraHalDelegate::CameraDeviceStatusChange(
   switch (new_status) {
     case cros::mojom::CameraDeviceStatus::CAMERA_DEVICE_STATUS_PRESENT:
       if (it == camera_info_.end()) {
+        // Get info for the newly connected external camera.
+        // |has_camera_connected_| might be signaled in
+        // OnGotCameraInfoOnIpcThread().
         GetCameraInfoOnIpcThread(
             camera_id,
             base::BindOnce(&CameraHalDelegate::OnGotCameraInfoOnIpcThread, this,
@@ -401,6 +445,9 @@ void CameraHalDelegate::CameraDeviceStatusChange(
     case cros::mojom::CameraDeviceStatus::CAMERA_DEVICE_STATUS_NOT_PRESENT:
       if (it != camera_info_.end()) {
         camera_info_.erase(it);
+        if (camera_info_.empty()) {
+          has_camera_connected_.Reset();
+        }
       } else {
         LOG(WARNING) << "Ignore nonexistent camera_id = " << camera_id;
       }
